<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".WelcomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome_fragment"
        android:textSize= "46sp"
        android:textStyle= "bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/hello_welcome_fragment"
        android:textSize= "46sp"
        android:textStyle= "bold"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_app_button"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
    />

</LinearLayout>